--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "serve": "http-server dist",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "lint-fix": "eslint --fix ./src",
+    "build-image": "node sharp.js",
+    "e2e": "codeceptjs run --steps"
   },
   "keywords": [],
   "author": "your_name <your.email@domain.com>",
@@ -22,6 +25,7 @@
     "babel-jest": "^29.6.1",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
+    "codeceptjs": "^3.5.8",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.52.0",
@@ -35,8 +39,11 @@
     "imagemin-webpack-plugin": "^2.4.2",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "playwright": "^1.40.0",
+    "sharp": "^0.32.6",
     "style-loader": "^3.3.1",
     "webpack": "^5.88.2",
+    "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0",
@@ -46,6 +53,7 @@
   "dependencies": {
     "idb": "^7.1.1",
     "jquery": "^3.7.1",
+    "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.14.0",
     "workbox-precaching": "^7.0.0",
     "workbox-routing": "^7.0.0",
